--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,18 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.9",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
     "lodash": "^4.17.10",
     "mongoose": "^5.2.6",
-    "morgan": "~1.9.0"
+    "morgan": "~1.9.0",
+    "passport": "^0.4.0",
+    "passport-local": "^1.0.0"
   }
 }
