--- a/server/package.json
+++ b/server/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "bcrypt": "^3.0.0",
+    "cloudinary": "^1.11.0",
     "connect-mongo": "^2.0.1",
     "cookie-parser": "~1.4.3",
     "cors": "^2.8.4",
@@ -19,6 +20,8 @@
     "lodash": "^4.17.10",
     "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
+    "multer": "^1.3.1",
+    "multer-storage-cloudinary": "^2.2.1",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0"
   }
