--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@types/googlemaps": "^3.30.11",
     "core-js": "^2.5.4",
     "material-time-control": "github:SteveDunlap13/MaterialTimeControl",
     "rxjs": "^6.0.0",
