--- a/client/package.json
+++ b/client/package.json
@@ -26,6 +26,7 @@
     "@types/googlemaps": "^3.30.11",
     "core-js": "^2.5.4",
     "material-time-control": "github:SteveDunlap13/MaterialTimeControl",
+    "ng2-file-upload": "^1.3.0",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26"
   },
