--- a/client/package.json
+++ b/client/package.json
@@ -24,10 +24,13 @@
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
     "@types/googlemaps": "^3.30.11",
+    "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
     "material-time-control": "github:SteveDunlap13/MaterialTimeControl",
     "ng2-file-upload": "^1.3.0",
+    "push.js": "^1.0.7",
     "rxjs": "^6.0.0",
+    "socket.io-client": "^2.1.1",
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
