--- a/server/package.json
+++ b/server/package.json
@@ -18,12 +18,14 @@
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
     "http-errors": "~1.6.2",
+    "install": "^0.12.1",
     "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "mongoose": "^5.2.6",
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "npm": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
     "socket.io": "^2.1.1"
