--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "morgan": "~1.9.0",
     "multer": "^1.3.1",
     "multer-storage-cloudinary": "^2.2.1",
+    "node-schedule": "^1.3.0",
     "npm": "^6.3.0",
     "passport": "^0.4.0",
     "passport-local": "^1.0.0",
