--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,8 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
+    "@turf/boolean-contains": "^6.0.1",
+    "@turf/circle": "^6.0.1",
     "@types/googlemaps": "^3.30.11",
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
