--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "@types/googlemaps": "^3.30.11",
     "@types/socket.io-client": "^1.4.32",
     "core-js": "^2.5.4",
+    "lodash": "^4.17.10",
     "moment": "^2.22.2",
     "ng2-file-upload": "^1.3.0",
     "push.js": "^1.0.7",
