--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "express": "~4.16.0",
     "express-session": "^1.15.6",
     "hbs": "~4.0.1",
+    "heroku-ssl-redirect": "0.0.4",
     "http-errors": "~1.6.2",
     "install": "^0.12.1",
     "lodash": "^4.17.10",
